@@ -1,5 +1,6 @@
 0.1-82
 - rename e.g. adv.2enu() as to.enu.adv()
+- speed up conversion of ADP and ADV to enu by more than a factor of 10
 - change RDI coordinate handling
 - rename match.bytes() as matchBytes()
 - add drawpalette()
